--- a/css/main.scss
+++ b/css/main.scss
@@ -97,6 +97,7 @@
   @import "fonts";
   @import "colors";
   @import "mixins";
+  @import "variables";
   body {
       background: $black;
       color: #fff;
@@ -112,9 +113,18 @@
   }
   a:link,
   a:visited {
-      color: $dark-pink;
+      color: #fff;
       font-weight: $bold;
       text-decoration: none;
+  }
+  main {
+      p {
+          a:link,
+          a:visited {
+            border-bottom: 3px solid $dark-pink;
+            border-radius: $border-radius;
+          }
+      }
   }
   /* header */ 
   header {
@@ -157,6 +167,27 @@
           span {
               color: $light-purple;
           }
+      }
+  }
+  /* coming soon page */ 
+  #coming-soon-page {
+      @include intro-text;
+      .intro-text {
+        h1 {
+            opacity: 0;
+            &:nth-of-type(1) {
+                @include intro-animation(0s, 2s);
+                &:after {
+                    @include intro-animation(.5s, 2s);
+                    content: "|";
+                    animation-iteration-count: infinite;
+                }
+            }
+            &:nth-of-type(2) {
+                @include intro-animation(1s, 2s);
+                animation-delay: 1s;
+            }
+        }
       }
   }
   /* hub selection */ 
@@ -510,10 +541,10 @@
                         a:link,
                         a:visited {
                           background: $light-blue !important;
-                          border-bottom: 3px solid $light-blue;
+                          border-bottom: 5px solid $light-blue;
                           &:hover {
                               background: none !important;
-                              border-bottom: 3px solid $light-blue;
+                              border-bottom: 5px solid $light-blue;
                           }
                         }
                       }
@@ -524,6 +555,9 @@
       /* home page and hub selection */ 
       #hub-selection {
           .content-wrapper {
+              h2 {
+                  font-size: 2.5rem;
+              }
             .hub-container {
                 display: flex;
                 flex-direction: row;
