--- a/css/main.css
+++ b/css/main.css
@@ -142,23 +142,22 @@ header .content-wrapper {
 #coming-soon-page .intro-text {
   height: 600px;
   margin: 0 auto;
-  width: 50%; }
-  #coming-soon-page .intro-text span {
+  width: 50%;
+  color: #08080D; }
+  #coming-soon-page .intro-text span:nth-of-type(6) {
     background: #C490D1;
     color: #08080D;
     display: inline-block;
     font-weight: 600;
     padding: 5px;
     margin-top: 5px; }
-    #coming-soon-page .intro-text span:nth-of-type(even) {
+    #coming-soon-page .intro-text span:nth-of-type(6):nth-of-type(7) {
       background: #A0D2DB; }
-#coming-soon-page .intro-text h1 {
-  opacity: 0; }
-  #coming-soon-page .intro-text h1:nth-of-type(1) {
-    animation-name: textFade;
-    animation-delay: 0s;
-    animation-duration: 2s;
-    animation-fill-mode: forwards; }
+#coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(1) {
+  animation-name: textFade;
+  animation-delay: 0s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
 @keyframes textFade {
   from {
     color: #08080D;
@@ -166,13 +165,11 @@ header .content-wrapper {
   to {
     color: #fff;
     opacity: 1; } }
-    #coming-soon-page .intro-text h1:nth-of-type(1):after {
-      animation-name: textFade;
-      animation-delay: 0.5s;
-      animation-duration: 2s;
-      animation-fill-mode: forwards;
-      content: "|";
-      animation-iteration-count: infinite; }
+#coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(2) {
+  animation-name: textFade;
+  animation-delay: 0.5s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
 @keyframes textFade {
   from {
     color: #08080D;
@@ -180,12 +177,38 @@ header .content-wrapper {
   to {
     color: #fff;
     opacity: 1; } }
-  #coming-soon-page .intro-text h1:nth-of-type(2) {
-    animation-name: textFade;
-    animation-delay: 1s;
-    animation-duration: 2s;
-    animation-fill-mode: forwards;
-    animation-delay: 1s; }
+#coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(3) {
+  animation-name: textFade;
+  animation-delay: 1s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+#coming-soon-page .intro-text h1:nth-of-type(1):after {
+  animation-name: bye;
+  animation-delay: 2s;
+  animation-duration: 1s;
+  animation-iteration-count: 3;
+  animation-fill-mode: forwards;
+  font-weight: 300;
+  content: "|";
+  color: #08080D; }
+@keyframes bye {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(1):nth-of-type(2) {
+  animation-name: textFade;
+  animation-delay: 1s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-delay: 1s; }
 @keyframes textFade {
   from {
     color: #08080D;
