--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -161,6 +161,7 @@
     animation-delay: $delay;
     animation-duration: $duration;
     animation-fill-mode: $fill;
+    letter-spacing: -2px;
   @keyframes textFade {
     from {color: $black;
     opacity: 0;}
@@ -168,14 +169,16 @@
     opacity: 1;}
   }
 }
-@mixin outro-animation {
-  animation-name: bye;
-  animation-delay: 2s;
-  animation-duration: 1s;
-  animation-iteration-count: 3;
+@mixin type-animation($delay, $duration, $iteration) {
+  animation-name: typeSymbol;
+  animation-delay: $delay;
+  animation-duration: $duration;
+  animation-iteration-count: $iteration;
   animation-fill-mode: forwards;
+  content: "|";
+  color: $black;
   font-weight: $light;
-  @keyframes bye {
+  @keyframes typeSymbol {
     from {
       color: #fff;
     }
