--- a/css/main.css
+++ b/css/main.css
@@ -157,7 +157,8 @@ header .content-wrapper {
   animation-name: textFade;
   animation-delay: 0s;
   animation-duration: 2s;
-  animation-fill-mode: forwards; }
+  animation-fill-mode: forwards;
+  letter-spacing: -2px; }
 @keyframes textFade {
   from {
     color: #08080D;
@@ -165,23 +166,26 @@ header .content-wrapper {
   to {
     color: #fff;
     opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(1):after {
+    animation-name: typeSymbol;
+    animation-delay: 1s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
 #coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(2) {
-  animation-name: textFade;
-  animation-delay: 0.5s;
-  animation-duration: 2s;
-  animation-fill-mode: forwards; }
-@keyframes textFade {
-  from {
-    color: #08080D;
-    opacity: 0; }
-  to {
-    color: #fff;
-    opacity: 1; } }
-#coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(3) {
   animation-name: textFade;
   animation-delay: 1s;
   animation-duration: 2s;
-  animation-fill-mode: forwards; }
+  animation-fill-mode: forwards;
+  letter-spacing: -2px; }
 @keyframes textFade {
   from {
     color: #08080D;
@@ -189,25 +193,53 @@ header .content-wrapper {
   to {
     color: #fff;
     opacity: 1; } }
-#coming-soon-page .intro-text h1:nth-of-type(1):after {
-  animation-name: bye;
+  #coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(2):after {
+    animation-name: typeSymbol;
+    animation-delay: 2s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(3) {
+  animation-name: textFade;
   animation-delay: 2s;
-  animation-duration: 1s;
-  animation-iteration-count: 3;
+  animation-duration: 2s;
   animation-fill-mode: forwards;
-  font-weight: 300;
-  content: "|";
-  color: #08080D; }
-@keyframes bye {
+  letter-spacing: -2px; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(3):after {
+    animation-name: typeSymbol;
+    animation-delay: 3s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 3;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
   from {
     color: #fff; }
   to {
     color: #08080D; } }
 #coming-soon-page .intro-text h1:nth-of-type(1):nth-of-type(2) {
   animation-name: textFade;
-  animation-delay: 1s;
+  animation-delay: 2.5s;
   animation-duration: 2s;
   animation-fill-mode: forwards;
+  letter-spacing: -2px;
   animation-delay: 1s; }
 @keyframes textFade {
   from {
