--- a/css/main.scss
+++ b/css/main.scss
@@ -176,22 +176,29 @@
         h1:nth-of-type(1) {
             span:nth-of-type(1) {
                 @include intro-animation(0s, 2s, forwards);
+                &:after {
+                    @include type-animation(1s, 1.5s, 1);
+                }
             }
             span:nth-of-type(2) {
-                @include intro-animation(.5s, 2s, forwards);
+                @include intro-animation(1s, 2s, forwards);
+                &:after {
+                    @include type-animation(2s, 1.5s, 1);
+                }
             }
             span:nth-of-type(3) {
-                @include intro-animation(1s, 2s, forwards);
-            }
-            &:after {
-                @include outro-animation;
-                content: "|";
-                color: $black;
+                @include intro-animation(2s, 2s, forwards);
+                &:after {
+                    @include type-animation(3s, 1.5s, 3);
+                }
             }
             &:nth-of-type(2) {
-                @include intro-animation(1s, 2s, forwards);
+                @include intro-animation(2.5s, 2s, forwards);
                 animation-delay: 1s;
             }
+        }
+        h1:nth-of-type(2) {
+
         }
       }
   }
