--- a/css/main.css
+++ b/css/main.css
@@ -168,7 +168,7 @@ header .content-wrapper {
     opacity: 1; } }
   #coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(1):after {
     animation-name: typeSymbol;
-    animation-delay: 1s;
+    animation-delay: 0.75s;
     animation-duration: 1.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -224,6 +224,114 @@ header .content-wrapper {
     animation-name: typeSymbol;
     animation-delay: 3s;
     animation-duration: 1.5s;
+    animation-iteration-count: 2;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(1) {
+  animation-name: textFade;
+  animation-delay: 5s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  letter-spacing: -2px; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(1):after {
+    animation-name: typeSymbol;
+    animation-delay: 6s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(2) {
+  animation-name: textFade;
+  animation-delay: 6s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  letter-spacing: -2px; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(2):after {
+    animation-name: typeSymbol;
+    animation-delay: 7s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(3) {
+  animation-name: textFade;
+  animation-delay: 7s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  letter-spacing: -2px; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(3):after {
+    animation-name: typeSymbol;
+    animation-delay: 8s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(4) {
+  animation-name: textFade;
+  animation-delay: 9s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  letter-spacing: -2px; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(4):after {
+    animation-name: typeSymbol;
+    animation-delay: 10s;
+    animation-duration: 1.5s;
     animation-iteration-count: 3;
     animation-fill-mode: forwards;
     content: "|";
@@ -234,20 +342,6 @@ header .content-wrapper {
     color: #fff; }
   to {
     color: #08080D; } }
-#coming-soon-page .intro-text h1:nth-of-type(1):nth-of-type(2) {
-  animation-name: textFade;
-  animation-delay: 2.5s;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-  letter-spacing: -2px;
-  animation-delay: 1s; }
-@keyframes textFade {
-  from {
-    color: #08080D;
-    opacity: 0; }
-  to {
-    color: #fff;
-    opacity: 1; } }
 /* hub selection */
 #hub-selection {
   text-transform: lowercase; }
