--- a/css/main.css
+++ b/css/main.css
@@ -459,6 +459,7 @@ header .content-wrapper {
   justify-content: space-between;
   /* blog on the front page that shows the latest posts as preview blocks */
   /* blog on the "blog" page that shows the latest posts in chronological order */
+  /* crochet tech hub blog, single post, pattern template */
   /* about page */ }
   #main-content .blog.front-page {
     display: flex;
@@ -524,6 +525,20 @@ header .content-wrapper {
     width: 80%;
     margin: 0 auto;
     padding: 10px !important; }
+  #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post .pattern-section-jump {
+    width: 100%;
+    display: flex; }
+  #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post #circuit-diagram img {
+    width: 100%;
+    height: auto;
+    object-fit: cover; }
+  #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post #assembly {
+    display: flex;
+    flex-direction: row; }
+    #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post #assembly img {
+      width: 50%;
+      height: 400px;
+      object-fit: cover; }
   #main-content .about-page h1 {
     border-bottom: 3px solid #A0D2DB;
     color: #C490D1;
