--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,9 @@ textarea {
   padding: 0.2em 0; }
 
 /* universal styles */
+html {
+  scroll-behavior: smooth; }
+
 body {
   background: #08080D;
   color: #fff;
@@ -527,15 +530,21 @@ header .content-wrapper {
     padding: 10px !important; }
   #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post .pattern-section-jump {
     width: 100%;
-    display: flex; }
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly; }
+    #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post .pattern-section-jump h2 {
+      color: #C490D1;
+      font-weight: 300;
+      text-transform: lowercase; }
   #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post #circuit-diagram img {
     width: 100%;
     height: auto;
     object-fit: cover; }
-  #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post #assembly {
+  #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post #assembly .assembly-content {
     display: flex;
-    flex-direction: row; }
-    #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post #assembly img {
+    flex-direction: column; }
+    #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post #assembly .assembly-content img {
       width: 50%;
       height: 400px;
       object-fit: cover; }
