--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -8,3 +8,4 @@ $rgba-orange: rgba(184, 40, 0, 1);
 $rgba-light-blue: rgba(160, 210, 219, 1);
 $rgba-light-purple: rgba(196, 144, 209, 1);
 $rgba-dark-pink: rgba(184, 51, 106, 1);
+$semi-transparent-black: rgba(8,8,13,.45);
