--- a/css/main.css
+++ b/css/main.css
@@ -167,8 +167,7 @@ header .content-wrapper {
   animation-name: textFade;
   animation-delay: 0s;
   animation-duration: 2s;
-  animation-fill-mode: forwards;
-  letter-spacing: -2px; }
+  animation-fill-mode: forwards; }
 @keyframes textFade {
   from {
     color: #08080D;
@@ -179,61 +178,7 @@ header .content-wrapper {
   #coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(1):after {
     animation-name: typeSymbol;
     animation-delay: 0.75s;
-    animation-duration: 1.5s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    content: "|";
-    color: #08080D;
-    font-weight: 300; }
-@keyframes typeSymbol {
-  from {
-    color: #fff; }
-  to {
-    color: #08080D; } }
-#coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(2) {
-  animation-name: textFade;
-  animation-delay: 1s;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-  letter-spacing: -2px; }
-@keyframes textFade {
-  from {
-    color: #08080D;
-    opacity: 0; }
-  to {
-    color: #fff;
-    opacity: 1; } }
-  #coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(2):after {
-    animation-name: typeSymbol;
-    animation-delay: 2s;
-    animation-duration: 1.5s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    content: "|";
-    color: #08080D;
-    font-weight: 300; }
-@keyframes typeSymbol {
-  from {
-    color: #fff; }
-  to {
-    color: #08080D; } }
-#coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(3) {
-  animation-name: textFade;
-  animation-delay: 2s;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-  letter-spacing: -2px; }
-@keyframes textFade {
-  from {
-    color: #08080D;
-    opacity: 0; }
-  to {
-    color: #fff;
-    opacity: 1; } }
-  #coming-soon-page .intro-text h1:nth-of-type(1) span:nth-of-type(3):after {
-    animation-name: typeSymbol;
-    animation-delay: 3s;
-    animation-duration: 1.5s;
+    animation-duration: 1s;
     animation-iteration-count: 2;
     animation-fill-mode: forwards;
     content: "|";
@@ -246,10 +191,9 @@ header .content-wrapper {
     color: #08080D; } }
 #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(1) {
   animation-name: textFade;
-  animation-delay: 5s;
+  animation-delay: 3s;
   animation-duration: 2s;
-  animation-fill-mode: forwards;
-  letter-spacing: -2px; }
+  animation-fill-mode: forwards; }
 @keyframes textFade {
   from {
     color: #08080D;
@@ -259,7 +203,7 @@ header .content-wrapper {
     opacity: 1; } }
   #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(1):after {
     animation-name: typeSymbol;
-    animation-delay: 6s;
+    animation-delay: 4s;
     animation-duration: 1.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -273,10 +217,9 @@ header .content-wrapper {
     color: #08080D; } }
 #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(2) {
   animation-name: textFade;
-  animation-delay: 6s;
+  animation-delay: 4.5s;
   animation-duration: 2s;
-  animation-fill-mode: forwards;
-  letter-spacing: -2px; }
+  animation-fill-mode: forwards; }
 @keyframes textFade {
   from {
     color: #08080D;
@@ -286,63 +229,9 @@ header .content-wrapper {
     opacity: 1; } }
   #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(2):after {
     animation-name: typeSymbol;
-    animation-delay: 7s;
+    animation-delay: 5s;
     animation-duration: 1.5s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    content: "|";
-    color: #08080D;
-    font-weight: 300; }
-@keyframes typeSymbol {
-  from {
-    color: #fff; }
-  to {
-    color: #08080D; } }
-#coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(3) {
-  animation-name: textFade;
-  animation-delay: 7s;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-  letter-spacing: -2px; }
-@keyframes textFade {
-  from {
-    color: #08080D;
-    opacity: 0; }
-  to {
-    color: #fff;
-    opacity: 1; } }
-  #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(3):after {
-    animation-name: typeSymbol;
-    animation-delay: 8s;
-    animation-duration: 1.5s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    content: "|";
-    color: #08080D;
-    font-weight: 300; }
-@keyframes typeSymbol {
-  from {
-    color: #fff; }
-  to {
-    color: #08080D; } }
-#coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(4) {
-  animation-name: textFade;
-  animation-delay: 9s;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-  letter-spacing: -2px; }
-@keyframes textFade {
-  from {
-    color: #08080D;
-    opacity: 0; }
-  to {
-    color: #fff;
-    opacity: 1; } }
-  #coming-soon-page .intro-text h1:nth-of-type(2) span:nth-of-type(4):after {
-    animation-name: typeSymbol;
-    animation-delay: 10s;
-    animation-duration: 1.5s;
-    animation-iteration-count: 3;
+    animation-iteration-count: 2;
     animation-fill-mode: forwards;
     content: "|";
     color: #08080D;
@@ -555,22 +444,24 @@ header .content-wrapper {
     width: 80%;
     margin: 0 auto;
     padding: 10px !important; }
+  #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post div h2 {
+    padding-top: 30px; }
   #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post .pattern-section-jump {
     background: rgba(8, 8, 13, 0.45);
     display: inline-flex;
     flex-flow: column wrap;
     align-items: center;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     width: 100%; }
-    #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post .pattern-section-jump h2 {
-      color: #C490D1;
-      padding-bottom: 5px;
-      text-transform: lowercase; }
     #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post .pattern-section-jump .pattern-section-jump-buttons {
       display: flex;
       flex-flow: row wrap;
       justify-content: center;
       width: 100%; }
+      #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post .pattern-section-jump .pattern-section-jump-buttons h3 {
+        color: #C490D1;
+        text-transform: lowercase;
+        padding-top: 3px; }
       #main-content .blog.crochet-tech-hub .content-wrapper .blog-single-post .pattern-section-jump .pattern-section-jump-buttons button {
         background: none;
         margin-left: 10px;
