--- a/css/main.css
+++ b/css/main.css
@@ -231,7 +231,111 @@ header .content-wrapper {
     animation-name: typeSymbol;
     animation-delay: 5s;
     animation-duration: 1.5s;
-    animation-iteration-count: 2;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(3) span:nth-of-type(1) {
+  animation-name: textFade;
+  animation-delay: 6s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(3) span:nth-of-type(1):after {
+    animation-name: typeSymbol;
+    animation-delay: 7s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(3) span:nth-of-type(2) {
+  animation-name: textFade;
+  animation-delay: 8s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(3) span:nth-of-type(2):after {
+    animation-name: typeSymbol;
+    animation-delay: 9s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(3) span:nth-of-type(3) {
+  animation-name: textFade;
+  animation-delay: 10s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(3) span:nth-of-type(3):after {
+    animation-name: typeSymbol;
+    animation-delay: 11s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(4) span:nth-of-type(1) {
+  animation-name: textFade;
+  animation-delay: 12s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(4) span:nth-of-type(1):after {
+    animation-name: typeSymbol;
+    animation-delay: 13s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
     animation-fill-mode: forwards;
     content: "|";
     color: #08080D;
