--- a/css/main.scss
+++ b/css/main.scss
@@ -201,13 +201,36 @@ header {
       span:nth-of-type(2) {
         @include intro-animation(4.5s, 2s, forwards);
         &:after {
-          @include type-animation(5s, 1.5s, 2);
+          @include type-animation(5s, 1.5s, 1);
         }
       }
     }
     h1:nth-of-type(3) {
       span:nth-of-type(1) {
-        
+        @include intro-animation(6s, 2s, forwards);
+        &:after {
+          @include type-animation(7s, 1.5s, 1);
+        }
+      }
+      span:nth-of-type(2) {
+        @include intro-animation(8s, 2s, forwards);
+        &:after {
+          @include type-animation(9s, 1.5s, 1);
+        }
+      }
+      span:nth-of-type(3) {
+        @include intro-animation(10s, 2s, forwards);
+        &:after {
+          @include type-animation(11s, 1.5s, 1);
+        }
+      }
+    }
+    h1:nth-of-type(4) {
+      span:nth-of-type(1) {
+        @include intro-animation(12s, 2s, forwards);
+        &:after {
+          @include type-animation(13s, 1.5s, 1);
+        }
       }
     }
   }
