--- a/css/main.css
+++ b/css/main.css
@@ -345,6 +345,110 @@ header .content-wrapper {
     color: #fff; }
   to {
     color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(4) span:nth-of-type(2) {
+  animation-name: textFade;
+  animation-delay: 14s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(4) span:nth-of-type(2):after {
+    animation-name: typeSymbol;
+    animation-delay: 15s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(4) span:nth-of-type(3) {
+  animation-name: textFade;
+  animation-delay: 16s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(4) span:nth-of-type(3):after {
+    animation-name: typeSymbol;
+    animation-delay: 17s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(4) span:nth-of-type(4) {
+  animation-name: textFade;
+  animation-delay: 18s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(4) span:nth-of-type(4):after {
+    animation-name: typeSymbol;
+    animation-delay: 19s;
+    animation-duration: 1.5s;
+    animation-iteration-count: 2;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
+#coming-soon-page .intro-text h1:nth-of-type(5) span:nth-of-type(1) {
+  animation-name: textFade;
+  animation-delay: 21s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards; }
+@keyframes textFade {
+  from {
+    color: #08080D;
+    opacity: 0; }
+  to {
+    color: #fff;
+    opacity: 1; } }
+  #coming-soon-page .intro-text h1:nth-of-type(5) span:nth-of-type(1):after {
+    animation-name: typeSymbol;
+    animation-delay: 22s;
+    animation-duration: 1.5s;
+    animation-iteration-count: forever;
+    animation-fill-mode: forwards;
+    content: "|";
+    color: #08080D;
+    font-weight: 300; }
+@keyframes typeSymbol {
+  from {
+    color: #fff; }
+  to {
+    color: #08080D; } }
 /* hub selection */
 #hub-selection {
   text-transform: lowercase; }
