--- a/css/main.scss
+++ b/css/main.scss
@@ -255,7 +255,7 @@ header {
       span:nth-of-type(1) {
         @include intro-animation(21s, 2s, forwards);
         &:after {
-          @include type-animation(22s, 1.5s, forever);
+          @include type-animation(22s, 1.5s, infinite);
         }
       }
     }
